# slateupfund

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.cursor/skills/boldsign-assistant/: SKILL.md
backend/: __init__.py  config.py  exceptions.py  main.py  requirements.txt
backend/dependencies/: auth.py  services.py
backend/routes/: documents.py
backend/schemas/: documents_model.py
backend/services/: __init__.py  boldsign_service.py  boldsign_template_client.py  doc_prefill.py  field_validation.py
docs/: ARCHITECTURE.md  REFACTOR_PREFILL_TO_EXISTING_FORM_FIELDS.md  SECURITY.md
tests/: __init__.py  conftest.py  test_boldsign_service.py  test_config.py  test_doc_prefill.py  test_main.py  test_routes_documents.py  test_schemas.py
